Browserify system update

--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "gulp-uglify": "^1.0.1",
     "gulp-streamify": "0.0.5",
     "main-bower-files": "^2.0.0",
-    "debowerify": "^0.8.1"
+    "debowerify": "^0.8.1",
+    "gulp-concat": "^2.4.0",
+    "watchify": "^1.0.2",
+    "gulp-util": "^3.0.1"
   },
   "dependencies": {
     "jquery": "^2.1.1"
