--- a/bower.json
+++ b/bower.json
@@ -1,32 +1,33 @@
 {
-    "name": "own-family-tree",
-    "version": "0.0.0",
-    "homepage": "https://github.com/starikan/own-family-tree",
-    "authors": [
-        "Starik <4analit@gmail.com>"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "angular": "~1.2.24",
-        "bootstrap": "~3.2.0"
-    },
-    "overrides": {
-        "bootstrap": {
-            "main": [
-                "./dist/css/bootstrap.css",
-                "./dist/js/bootstrap.js",
-                "./dist/fonts/glyphicons-halflings-regular.eot",
-                "./dist/fonts/glyphicons-halflings-regular.svg",
-                "./dist/fonts/glyphicons-halflings-regular.ttf",
-                "./dist/fonts/glyphicons-halflings-regular.wof"
-            ]
-        }
+  "name": "own-family-tree",
+  "version": "0.0.0",
+  "homepage": "https://github.com/starikan/own-family-tree",
+  "authors": [
+    "Starik <4analit@gmail.com>"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "~1.2.24",
+    "bootstrap": "~3.2.0",
+    "vis": "~3.4.2"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "./dist/css/bootstrap.css",
+        "./dist/js/bootstrap.js",
+        "./dist/fonts/glyphicons-halflings-regular.eot",
+        "./dist/fonts/glyphicons-halflings-regular.svg",
+        "./dist/fonts/glyphicons-halflings-regular.ttf",
+        "./dist/fonts/glyphicons-halflings-regular.wof"
+      ]
     }
+  }
 }
