--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "angular": "~1.2.24",
     "bootstrap": "~3.2.0",
-    "vis": "~3.4.2"
+    "vis": "~3.4.2",
+    "ngDialog": "~0.3.0"
   },
   "overrides": {
     "bootstrap": {
