--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "opn": "^1.0.0",
     "require-dir": "^0.1.0",
     "vinyl-source-stream": "^1.0.0",
-    "watchify": "~1.0.0"
+    "watchify": "~1.0.0",
+    "lodash": "^2.4.1",
+    "gulp-batch-replace": "0.0.0"
   },
   "dependencies": {
     "jquery": "^2.1.1"
